--- a/index.html
+++ b/index.html
@@ -840,5 +840,59 @@ checkbox" id="settingsTraining"><span class="toggle-slider"></span></label></div
         </div>
     </div>
     <script src="quantum-core.js"></script>
+    <!-- PRIDAJ TENTO BLOK KÓDU DO TVOJHO index.html, NAPR. PRED </body> -->
+<section id="settings-section" style="padding: 40px; max-width: 800px; margin: 0 auto; background: rgba(10, 10, 40, 0.6); border-radius: 20px; margin-top: 50px;">
+    <h2>Settings</h2>
+    <p>Configure your Quantum Mirror experience</p>
+
+    <!-- Privacy Settings Block -->
+    <div class="settings-block" style="margin-top: 30px; padding: 25px; background: rgba(255,255,255,0.05); border-radius: 15px;">
+        <h3>Privacy Settings</h3>
+        
+        <!-- AI Learning Checkbox -->
+        <div class="checkbox-item" style="margin: 15px 0; display: flex; align-items: center;">
+            <input type="checkbox" id="privacy-ai-learning" style="margin-right: 12px; transform: scale(1.3);">
+            <label for="privacy-ai-learning" style="font-size: 1.1rem;">
+                <strong>AI Learning</strong> – Learn from our conversations
+            </label>
+        </div>
+        <!-- Public Gallery Checkbox -->
+        <div class="checkbox-item" style="margin: 15px 0; display: flex; align-items: center;">
+            <input type="checkbox" id="privacy-gallery" style="margin-right: 12px; transform: scale(1.3);">
+            <label for="privacy-gallery" style="font-size: 1.1rem;">
+                <strong>Public Gallery</strong> – Show my avatar to others
+            </label>
+        </div>
+        <!-- Research Data Checkbox -->
+        <div class="checkbox-item" style="margin: 15px 0; display: flex; align-items: center;">
+            <input type="checkbox" id="privacy-research" style="margin-right: 12px; transform: scale(1.3);">
+            <label for="privacy-research" style="font-size: 1.1rem;">
+                <strong>Research Data</strong> – Share anonymized data
+            </label>
+        </div>
+        
+        <!-- GDPR Status Display -->
+        <div style="margin-top: 25px; padding: 15px; background: rgba(255, 193, 7, 0.1); border-radius: 10px;">
+            <p style="margin: 0; display: flex; align-items: center;">
+                <span style="font-weight: bold; margin-right: 10px;">GDPR Status:</span>
+                <span class="privacy-status" style="color: #ff9800; font-weight: bold;">Not Configured</span>
+            </p>
+            <button onclick="document.getElementById('gdpr-modal').style.display='block'" style="margin-top: 10px; padding: 10px 20px; background: var(--primary-color); color: black; border: none; border-radius: 8px; cursor: pointer;">
+                Edit GDPR Consent
+            </button>
+        </div>
+
+        <!-- Save Button -->
+        <button onclick="savePrivacySettings()" style="margin-top: 30px; padding: 15px 30px; background: var(--accent-color); color: black; border: none; border-radius: 10px; font-size: 1.1rem; font-weight: bold; cursor: pointer;">
+            Save Privacy Settings
+        </button>
+    </div>
+</section>
+
+<!-- Simple AR Viewer Modal (for video playback) -->
+<div id="ar-viewer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: black; z-index: 10000;">
+    <button onclick="closeARViewer()" style="position: absolute; top: 20px; right: 20px; background: red; color: white; border: none; padding: 10px; z-index: 10001; cursor: pointer;">✕ Close</button>
+    <video id="ar-video" controls autoplay style="width: 100%; height: 100%; object-fit: contain;"></video>
+</div>
 </body>
 </html>
